--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -92,7 +92,7 @@ small {
     top: 0;
     left: 0;
     width: 100%;
-    background: rgba(251, 248, 250, 0.7);
+    background: var(--navbar-bg);
     backdrop-filter: blur(10px);
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     z-index: 1000;
@@ -582,9 +582,7 @@ footer {
     background: var(--primary);
     color: var(--background);
 }
-[data-theme="dark"] .navbar-menu {
-    background: var(--background);
-}
+
 
 [data-theme="dark"] header {
     color: var(--text);
@@ -691,5 +689,9 @@ footer {
     .profile-photo {
         width: 250px;
         height: 250px;
+    }
+
+    [data-theme="dark"] .navbar-menu {
+        background: var(--background);
     }
 }
