--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -375,7 +375,7 @@ section {
 
 .company {
     font-weight: bold;
-    color: var(--accent);
+    color: var(--primary);
     margin-bottom: 5px;
 }
 
